[package]
name = "brine-bn128-bls"
authors = ["Dean Little <@deanmlittle>", "Zelimir Fedoran <@zelimir__>"]
version = "0.1.0"
description = "BLS signatures over the Alt-BN128 curve for Solana"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
dashu = "0.4.2"
solana-nostd-sha256 = "0.1.3"
solana-bn254 = "2.1.0"
num = "0.4.3"
ark-bn254 = { version = "0.5.0", optional = true }
ark-ec = { version = "0.5.0", optional = true  }
ark-ff = { version = "0.5.0", optional = true  }
ark-serialize = { version = "0.5.0", optional = true  }
rand = { version = "0.8.5", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-bn254 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = { version = "0.8.5", default-features = false }
